crates/plotnik-tests/tests/04-emit/types/recursion/error_captured_ref_in_recursive_cycle.txt
A = {
  (expression_statement)
  (statement_block (B))?
}

B = {
  (debugger_statement)
  (statement_block
    (A) @x
  )? @s
}
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:9:5
  |
1 |   A = {
  |  _____-
2 | |   (expression_statement)
3 | |   (statement_block (B))?
4 | | }
  | |_- defined here
...
9 |       (A) @x
  |       ^^^
